--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ width:360px;
 .border5{
 	
 	width:100%; 
+	height:1100px;
 	padding-top:10%;
          background-image:url('https://i.pinimg.com/564x/f1/f3/f6/f1f3f6597074e40e6d2d2b70d1e9c0d3.jpg');
   background-repeat:no-repeat;
