--- a/style.css
+++ b/style.css
@@ -146,7 +146,9 @@ h2{
 		   width:700px;
 		   background-image:url("https://i.pinimg.com/originals/a7/a5/96/a7a59632f36880d78e0940112f341a1f.jpg");
 		   background-size:cover;
-		   background-repeat:no-repeat;}
+		   background-repeat:no-repeat;
+                   padding-bottom:5px;
+}
 .withlove{
 	width:100%;
 	height:150px;
