--- a/style.css
+++ b/style.css
@@ -135,18 +135,12 @@ h2{
 	color:#white;
 }
 
-.superfly{
-  width:720px;
-  over-flow:scroll;
-  margin-left:28%;
-  margin-right:40%;
-  background-color:rgba(220, 220, 220, .5);
-}
+
 .clothed{
 		   height:550px;
 		   width:700px;
 		   background-image:url("https://i.pinimg.com/originals/a7/a5/96/a7a59632f36880d78e0940112f341a1f.jpg");
-		   background-size:cover;
+		   background-size:700px 550px;
 		   background-repeat:no-repeat;
                    padding-bottom:5%;
 }
