--- a/style.css
+++ b/style.css
@@ -134,6 +134,16 @@ h2{
 	text-align:left;
 	color:#white;
 }
+h8{
+	font-size:20px;
+	text-align:left;
+	color:#blue;
+}
+h9{
+	font-size:20px;
+	text-align:left;
+	color:#red;
+}
 
 
 .clothed{
