--- a/style.css
+++ b/style.css
@@ -87,33 +87,33 @@ width:360px;
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
-	width:400px;
+	width:210px;
   background-image:url('https://i.pinimg.com/564x/82/47/c9/8247c9e12b73154408440b68015cbb1f.jpg');
-  background-size:400px 210px;
+  background-size:210px 210px;
 	}
 .stocks2{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
 	width:400px;
-  background-image:url('https://i.pinimg.com/564x/f6/a8/10/f6a8106e0953dc99d7b0a37d9d478f0a.jpg');
-  background-size:400px 210px;
+  background-image:url('https://i.pinimg.com/originals/b6/e6/0c/b6e60c232eea473eb8bce612ed569cd3.gif');
+  background-size:210px 210px;
 	}
 .health3{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
-	width:400px;
-  background-image:url('https://i.pinimg.com/564x/2a/89/41/2a8941eba203ce419762c55a724b0106.jpg');
-  background-size:400px 210px;
+	width:210px;
+  background-image:url('https://media0.giphy.com/media/FRfhS8hv0U0Te/giphy.gif');
+  background-size:210px 210px;
 	}
 .products4{
 	border-style:outset;
 	border-color:#E5E4E2;
 	height:210px;
-	width:400px;
-  background-image:url('https://i.pinimg.com/564x/93/b9/a8/93b9a8acb71ee95b7a80346cdcd8f492.jpg');
-  background-size:400px 210px;
+	width:210px;
+  background-image:url('https://media1.giphy.com/media/RSZI67yZwYsxi/giphy.gif');
+  background-size:210px 210px;
 	}
 .border5{
 	
