--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ width:360px;
 	border-color:#E5E4E2;
 	height:210px;
 	width:210px;
-  background-image:url('https://i.pinimg.com/564x/82/47/c9/8247c9e12b73154408440b68015cbb1f.jpg');
+  background-image:url('https://media3.giphy.com/media/l41YoVcd7UhOWIDBK/giphy.gif');
   background-size:210px 210px;
 	}
 .stocks2{
