--- a/style.css
+++ b/style.css
@@ -166,6 +166,14 @@ h9{
 	background-size:400px 210px;
 	background-repeat:no-repeat;
 }
+.realestate{
+	border-style:outset;
+	background-image:url('https://i.pinimg.com/originals/d7/1d/b3/d71db35293a69caaa33bacd9f85d506e.gif');
+	height:210px;
+	width:400;
+	background-size:400px 210px;
+	background-repeat:no-repeat;
+}
 .neon
 {
   position:absolute;
