--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@ html { background-color:rgba(225, 0, 225, 1);
 		width:100%;
 	overflow:hidden;
 }
-
+.revolver{
+  width:100%;
+  height:160px;
+  overflow:hidden;
+  z-index:75;
+}
 .containers{
  position:absolute;
   z-index:50;
